# socialmedia

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
docs/: OAUTH_REVIEW_SUBMISSION_KIT.md  PRODUCTION_ENV.md  architecture.md  niches.md  providers.md  usage-events.md
examples/: crypto_niche.yaml  fitness_niche.yaml  recipes_niche.yaml
frontend/: .dockerignore  Dockerfile  next.config.ts  openapi.json  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(protected)/: layout.tsx
frontend/src/app/(public)/: layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/: auth-guard.tsx  providers.tsx  sidebar.tsx
frontend/src/components/ui/: button.tsx  card.tsx  input.tsx
frontend/src/lib/: utils.ts
frontend/src/lib/api/: client.ts  hooks.ts  types.ts
scripts/: apply_avatar_mode_migration.py  dump_openapi.py
src/sma/: __init__.py  config.py
src/sma/cli/: main.py  migrate.py
src/sma/core/: templates.py
src/sma/core/content/: caption_generator.py  story_analyzer.py
src/sma/core/niche/: config.py  loader.py
src/sma/core/pipeline/: context.py  db_runner.py  factory.py  factory_db.py  orchestrator.py  orchestrator_cinematic.py  orchestrator_heygen.py
src/sma/core/topics/: base.py  scorer.py
src/sma/db/: base.py  crypto.py  session.py
src/sma/db/alembic/: env.py
src/sma/db/models/: __init__.py  credentials.py  niche.py  oauth_state.py  post.py  posting_rule.py  prompt_template.py  schedule.py  social_account.py  tenant.py  topic.py  usage_event.py  user.py
src/sma/providers/: registry.py
src/sma/providers/avatar/: __init__.py  heygen.py
src/sma/providers/image/: base.py  dalle.py  nano_banana.py  pexels.py  unsplash.py
src/sma/providers/llm/: anthropic.py  base.py  gemini.py  openai.py
src/sma/providers/music/: base.py  elevenlabs.py  local.py
src/sma/usage/: events.py  pricing.py  pricing.yaml  recorder.py
src/sma/web/: app.py
src/sma/worker/: main.py
templates/: ai_topic_generation.j2  caption.j2  hashtags.j2  image_scene.j2  music_prompt.j2  story_analysis.j2  thumbnail_prompt.j2  topic_scoring.j2
tests/: conftest.py
tests/smoke/: run_crud_smoke.py  run_e2e_smoke.py  run_phase2_smoke.py  run_whop_signup_smoke.py
tests/unit/: test_audio_chunking.py  test_caption_generator.py  test_niche_config.py  test_pricing.py  test_registry.py  test_templates.py  test_topic.py  test_usage_recorder.py  test_video_drawtext_escape.py
(+86 files in other folders)
