[project]
name = "social-media-automation"
version = "0.1.0"
description = "Niche-agnostic AI content automation: topic discovery, video generation, multi-platform posting"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Social Media Automation" }]

dependencies = [
    # LLM providers
    "openai>=1.50",
    "anthropic>=0.40",
    "google-genai>=0.3",

    # Voice / music
    "elevenlabs>=1.0",

    # Core
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "loguru>=0.7",
    "jinja2>=3.1",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "tenacity>=9.0",
    "httpx>=0.27",
    "feedparser>=6.0",

    # Media
    "ffmpeg-python>=0.2",
    "moviepy>=1.0.3",
    "pillow>=10",
    "numpy>=1.26",

    # Social platforms (Google APIs for YouTube)
    "google-api-python-client>=2.140",
    "google-auth-oauthlib>=1.2",
    "google-auth-httplib2>=0.2",
    "requests-toolbelt>=1.0",

    # Phase 2 — backend
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0.34",
    "psycopg[binary]>=3.2",         # modern psycopg3 (not psycopg2); binary build for ease of install
    "alembic>=1.13",
    "cryptography>=43.0",            # Fernet
    "bcrypt>=4.0",                   # password hashing (no passlib — it's unmaintained + bcrypt-4 incompat)
    "PyJWT>=2.9",                    # JWT for auth
    "apscheduler>=3.10",             # in-process scheduler for the worker
    "python-multipart>=0.0.12",      # FastAPI form handling (OAuth callbacks, file uploads)
    "email-validator>=2.2",          # pydantic EmailStr validation
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "black>=24.8",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "types-PyYAML",
    "types-requests",
]

[project.scripts]
sma = "sma.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sma"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by black

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
